kubernetes/apps/auth/authelia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  hostnames:
    - auth.ringbell.cc
  parentRefs:
    - name: external-auth
      namespace: networking
  rules:
    - backendRefs:
        - name: authelia
          port: 80
